Fix entry mask effect, menu window height and overflow behavior in menu change

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -3,9 +3,14 @@
   line-height: 2.5rem;
 }
 
+.social {
+  font-family: var(--font-josefin-sans);
+}
+
 .social h4 {
   font-size: 1rem;
   line-height: 2.5rem;
+  font-weight: 600;
 }
 
 .social p {
