--- a/src/components/Header/Nav/styles.module.css
+++ b/src/components/Header/Nav/styles.module.css
@@ -1,5 +1,5 @@
 .menu {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: var(--yellow);
   position: fixed;
